--- a/tests/src/Html/templatevalid.html
+++ b/tests/src/Html/templatevalid.html
@@ -8,8 +8,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--css-->
     </head>
     <body>
-        <div>TODO write content</div>
+        <div><!--body--></div>
+        <!--js-->
     </body>
 </html>
