--- a/tests/src/Html/templatevalid.html
+++ b/tests/src/Html/templatevalid.html
@@ -9,9 +9,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--css-->
+        <!--header-->
     </head>
     <body>
-        <div><!--body--></div>
+        <div><!--main--></div>
         <!--js-->
+        <!--footer-->
     </body>
 </html>
